Updated URI creation.